Àgregar llave publica

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <section class="buttons">
     <a href="assets/doc/cv.pdf" download>Descargar CV</a>
-    <a href="assets/doc/llave_publica.txt" download>Descargar llave pública</a>
+    <a href="assets/doc/public_key.txt" download>Descargar llave pública</a>
   </section>
 
   <footer>
